--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ nav ul li a:hover{
  height: 600px;
 }
 
-.container .contents{
+.contents{
  border: 1px solid #2C2C2C;
  margin: 10px auto;
   width: 95%;
@@ -52,105 +52,20 @@ nav ul li a:hover{
   width: 45%;
 }
 
-.profile-box{
-  display: flex;
-  height: 100%;
-
+.skills-container{
+  height: 900px;
 }
 
-.my-face-img{
-  width: 50%;
+.skills-contents{
+  height: 90%;
 }
 
-
-.img-frame{
-  width: 300px;
-  position:relative;
-}
-
-.img-frame::before{
-  content:"";
-  display:block;
-  width:50px;
-  height:35%;
-  position:absolute;
-  top:-10%;
-  left:-10%;
-  border-top: 5px solid red;
-  border-left: 5px solid red;
-}
-.img-frame::after{
-  content:"";
-  display:block;
-  width:50px;
-  height:35%;
-  position:absolute;
-  bottom:-10%;
-  right:-10%;
-  border-bottom: 5px solid red;
-  border-right: 5px solid red;
-}
-
-.img-frame img{
-  width: 100%;
-  border-radius: 50%;
-}
-
-.profile{
-  width: 50%;
-  /* height: 80%; */
-  border: 1px solid #2C2C2C;
-  margin: 10px ;
-
-}
-
-.profile-card{
-  height: 30%;
-  width: 90%;
-  border: 1px solid #2C2C2C;
-  margin: 10px auto;
-}
-
-.profile-title{
+.skill-card{
+  border: #2C2C2C 1px solid ;
   width: 95%;
-  border: 1px solid #2C2C2C;
-  margin: 5px auto;
-  /* text-align: left; */
-  letter-spacing: 5em;
-  text-indent: 5em;
-  border-top: 5px solid blue;
-  border-left: 3px solid blue;
-}
-
-.profile-txt{
-  width: 96%;
-  height: 70%;
-  border: #2C2C2C 1px solid;
-  font-size: 1.5em;
-}
-
-.profile-txt-mini{
-  font-size: 1rem;
-}
-
-.comment-box{
-  overflow: hidden;/*float解除*/
-
-}
-.comment-box .comment-img-space{
-  float: right;/*画像の位置を右下にしたい場合はright*/
-  /* height: 5.3em; */
-  height: 3em;/*画像上の余白の高さ*/
-}
-.comment-box .comment-img{
-  float: right;/*画像の位置を右下にしたい場合はright*/
-  clear: both;/*.spaceのfloat解除*/
-  margin: 0.6em 0.4em 0 1em ;
-  /*画像の周りの余白*/
-  width: 30%;
-}
-.comment-box .comment-img img{
-  width: 100%;
+  height: 30%;
+  margin: 15px auto;
+  display: flex;
 }
 
 footer{
