--- a/css/myskills.css
+++ b/css/myskills.css
@@ -1,44 +1,48 @@
 .skills-contents{
-    height: 90%;
-  }
-  
-  .skill-card{
-    border: #2C2C2C 1px solid ;
-    width: 95%;
-    height: 30%;
-    margin: 15px auto;
-    display: flex;
-  }
-  
-  .skill-img{
-    width: 40%;
-    height: 85%;
-    border: #2C2C2C 1px solid;
-    margin: 10px;
-  }
-  
-  .skill-img img{
-    width: 100%;
-  }
-  
-  .skill-block{
-    width: 60%;
-    height: 85%;
-    border: #2C2C2C 1px solid;
-    margin: 10px;
-  
-  }
-  
-  .skill-title{
-    width: 35%;
-    height: 20%;
-    margin: 5px auto;
-    border: #2C2C2C 1px solid;
-    margin-left: 10px;
-  }
-  
-  .skill-txt{
-    width: 95%;
-    height: 70%;
-    border: #2C2C2C 1px solid;
-  }
+  height: 90%;
+}
+
+.skill-card{
+  border: #2C2C2C 1px solid ;
+  width: 95%;
+  height: 30%;
+  margin: 15px auto;
+  display: flex;
+}
+
+.skill-img{
+  width: 40%;
+  height: 85%;
+  border: #2C2C2C 1px solid;
+  margin: 10px;
+}
+
+.skill-img img{
+  width: 100%;
+}
+
+.skill-block{
+  width: 60%;
+  height: 85%;
+  border: #2C2C2C 1px solid;
+  margin: 10px;
+
+}
+
+.skills-container{
+  height: 900px;
+}
+
+.skill-title{
+  width: 35%;
+  height: 20%;
+  margin: 5px auto;
+  border: #2C2C2C 1px solid;
+  margin-left: 10px;
+}
+
+.skill-txt{
+  width: 95%;
+  height: 70%;
+  border: #2C2C2C 1px solid;
+}
