--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ nav ul li a{
 
 nav ul li a:hover{
   color: red;
-  text-decoration: underline;
+  /* text-decoration: underline; */
 }
 
 #main-container{
@@ -55,4 +55,26 @@ nav ul li a:hover{
 
 footer{
   width: 1080px;
+}
+
+.top{
+  width: 100%;
+  background-color: #2C2C2C;
+}
+
+.top a{
+  color: #fff;
+  display: block;
+  width: 30%;
+  text-align: center;
+  text-decoration: none;
+}
+
+.top a:hover{
+  color: red;
+  /* text-decoration: underline; */
+}
+
+.my-division{
+  text-align: right;
 }
