--- a/css/profile.css
+++ b/css/profile.css
@@ -3,7 +3,7 @@
 .profile-box{
   display: flex;
   height: 100%;
-
+  background-image: linear-gradient(to right, red,orange);
 }
 
 .my-face-img{
@@ -14,6 +14,8 @@
 .img-frame{
   width: 300px;
   position:relative;
+  background-color: rgba(255, 255, 255, 0.63);
+
 }
 
 .img-frame::before{
@@ -24,8 +26,10 @@
   position:absolute;
   top:-10%;
   left:-10%;
-  border-top: 5px solid red;
-  border-left: 5px solid red;
+  /* border-top: 5px solid rgba(0, 255, 0, 0.788);
+  border-left: 5px solid rgba(0, 255, 0, 0.788); */
+  background-color: rgba(255, 255, 255, 0.63);
+
 }
 .img-frame::after{
   content:"";
@@ -35,8 +39,10 @@
   position:absolute;
   bottom:-10%;
   right:-10%;
-  border-bottom: 5px solid red;
-  border-right: 5px solid red;
+  /* border-bottom: 5px solid rgba(0, 255, 0, 0.788);
+  border-right: 5px solid rgba(0, 255, 0, 0.788); */
+  background-color: rgba(255, 255, 255, 0.63);
+
 }
 
 .img-frame img{
