--- a/css/profile.css
+++ b/css/profile.css
@@ -3,7 +3,7 @@
 .profile-box{
   display: flex;
   height: 100%;
-  background-image: linear-gradient(to right, red,orange);
+  /* background-image: linear-gradient(to right, red,orange); */
 }
 
 .my-face-img{
@@ -14,7 +14,7 @@
 .img-frame{
   width: 300px;
   position:relative;
-  background-color: rgba(255, 255, 255, 0.63);
+  background-color: rgba(255, 255, 255, 0);
 
 }
 
@@ -26,9 +26,9 @@
   position:absolute;
   top:-10%;
   left:-10%;
-  /* border-top: 5px solid rgba(0, 255, 0, 0.788);
-  border-left: 5px solid rgba(0, 255, 0, 0.788); */
-  background-color: rgba(255, 255, 255, 0.63);
+  border-top: 5px solid rgba(0, 255, 0, 0.788);
+  border-left: 5px solid rgba(0, 255, 0, 0.788);
+  /* background-color: rgba(255, 255, 255, 0.63); */
 
 }
 .img-frame::after{
@@ -39,9 +39,9 @@
   position:absolute;
   bottom:-10%;
   right:-10%;
-  /* border-bottom: 5px solid rgba(0, 255, 0, 0.788);
-  border-right: 5px solid rgba(0, 255, 0, 0.788); */
-  background-color: rgba(255, 255, 255, 0.63);
+  border-bottom: 5px solid rgba(0, 255, 0, 0.788);
+  border-right: 5px solid rgba(0, 255, 0, 0.788);
+  /* background-color: rgba(255, 255, 255, 0.63); */
 
 }
 
