--- a/css/profile.css
+++ b/css/profile.css
@@ -28,6 +28,7 @@
   left:-10%;
   border-top: 5px solid rgba(0, 255, 0, 0.788);
   border-left: 5px solid rgba(0, 255, 0, 0.788);
+  transition: 0.8s;
   /* background-color: rgba(255, 255, 255, 0.63); */
 
 }
@@ -41,8 +42,21 @@
   right:-10%;
   border-bottom: 5px solid rgba(0, 255, 0, 0.788);
   border-right: 5px solid rgba(0, 255, 0, 0.788);
+  transition: 0.8s;
   /* background-color: rgba(255, 255, 255, 0.63); */
 
+}
+.img-frame.img-animate::before{
+  width: 100%;
+  height: 100%;
+  top:0;
+  left:0;
+}
+.img-frame.img-animate::after{
+  width: 100%;
+  height: 100%;
+  bottom:0;
+  right:0;
 }
 
 .img-frame img{
